tests/ui/associated-type-bounds/return-type-notation/missing.stderr
warning: the feature `return_type_notation` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/missing.rs:3:12
   |
LL | #![feature(return_type_notation)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0220]: associated function `methid` not found for `Trait`
  --> $DIR/missing.rs:10:17
   |
LL | fn bar<T: Trait<methid(): Send>>() {}
   |                 ^^^^^^ help: there is an associated function with a similar name: `method`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0220`.
